--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,20 @@
 {
-    "name": "syncedtool share",
-    "version": "1",
-    "permissions": [
-        "storage"
-      ],
-    "manifest_version": 2,
-    "browser_action": {
-        "default_popup": "plugin.html",
-        "defult_title": "syncedtool share"
-    },
-    "content_scripts": 
-    [
-        {
-            "matches":["<all_urls>"],
-            "js":["jquery.min.js", "papaparse.min.js", "background.js"]
-        }
-    ],
-    "background": {
-        "scripts": ["jquery.min.js", "papaparse.min.js","background.js"]
-      }
+  "name": "syncedtool share",
+  "version": "1",
+  "permissions": ["storage"],
+  "manifest_version": 2,
+  "browser_action": {
+    "default_popup": "plugin.html",
+    "defult_title": "syncedtool share"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["jquery.min.js", "papaparse.min.js", "background.js"]
+    }
+  ],
+  "background": {
+    "scripts": ["jquery.min.js", "papaparse.min.js", "background.js"]
+  },
+  "icons": { "16": "syncedtool_icon.png" }
 }
